@@ -32,6 +32,9 @@
 ** Enhancements
 ** Issues fixed
 - The generational and precise garbage collector modes work again
+- ECL can now use precompiled headers to speed up compilation. Use ~(setq
+  c::*use-precompiled-headers* nil)~ to disable this feature
+** Issues fixed
 ** API changes
 * 20.4.24 changes since 16.1.3
 ** Announcement
